# AliasAPI

./: 1.txt  CMakeLists.txt  readme.md  run.sh
copy/: merge1.txt  merge2.txt  slugsize.txt
data/: .~lock.data.xlsx#  .~lock.上架模板.xlsx#  2_上架模板 (1).xlsx  30w.xlsx  30wdata.txt  3_上架模板 (1).xlsx  config.yaml  data.txt  data.xlsx  skudata.txt  slugsize.txt  上架模板.xlsx
data/multi/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  slugsize1.txt  slugsize10.txt  slugsize2.txt  slugsize3.txt  slugsize4.txt  slugsize5.txt  slugsize6.txt  slugsize7.txt  slugsize8.txt  slugsize9.txt
include/: types.h
libs/: CMakeLists.txt
libs/AliasAPI/: AliasAPI.cpp  AliasAPI.h  CMakeLists.txt
logs/: get_product_detail_url.txt  listing_product_multi.txt
res/: fail.txt  processed.txt  successful.txt  unseccessful.txt
skusearch/: f1.txt  f2.txt  out.txt  s1.txt
src/: CMakeLists.txt  multithread.cpp  test.cpp  testAPI.cpp
